--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,11 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro"
 
+const pageTitle = "AlgoLab - Home"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<p>This is the home page of AlgoLab</p>
+	<p>Here you can find all the tasks and challenges</p>
+	<p>Click on the navigation bar to go to the tasks page</p>
+</BaseLayout>
